# external-sort

./: .gitignore  CMakeLists.txt  README.md
include/: sort.h
src/: sort.cpp
tests/: CMakeLists.txt  test_ext_sort.cpp
